<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.example.toyoung"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_user_container"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible" >

        <RelativeLayout
            android:id="@+id/rl_user_center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <com.tuyoung.wu.AvatarView
                android:id="@+id/iv_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                android:clickable="true"
                android:contentDescription="@null"
                android:src="@drawable/widget_dface"
                app:border_color="@color/white"
                app:border_width="2dip" />

            <LinearLayout
                android:id="@+id/middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/iv_avatar"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userlocation" />

                <TextView
                    android:id="@+id/tv_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/space_10"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/message_notify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:src="@drawable/wd001" />

                    <ImageView
                        android:id="@+id/setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space_20"
                        android:clickable="true"
                        android:src="@drawable/wd002" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_20"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/support_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/support_count" />

                    <TextView
                        android:id="@+id/follow_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follow_count" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/myinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_information_background"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ly_question"
                style="@style/uset_information_ll" >

                <TextView
                    style="@style/user_formation_info"
                    android:text="@string/question" />

                <TextView
                    android:id="@+id/tv_question"
                    style="@style/user_formation_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_answer"
                style="@style/uset_information_ll" >

                <TextView
                    style="@style/user_formation_info"
                    android:text="@string/answer" />

                <TextView
                    android:id="@+id/tv_answer"
                    style="@style/user_formation_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_following"
                style="@style/uset_information_ll" >

                <TextView
                    style="@style/user_formation_info"
                    android:text="@string/following" />

                <TextView
                    android:id="@+id/tv_following"
                    style="@style/user_formation_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_favorite"
                style="@style/uset_information_ll" >

                <TextView
                    style="@style/user_formation_info"
                    android:text="@string/favorite" />

                <TextView
                    android:id="@+id/tv_favorite"
                    style="@style/user_formation_text" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="3px"
            android:background="@color/my_information_option_pressed" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_user_unlogin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <com.tuyoung.wu.CircleImageView
            android:id="@+id/iv_avatar1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_20"
            android:contentDescription="@null"
            android:src="@drawable/widget_dface"
            app:border_color="@color/white"
               
            app:border_width="3dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_avatar1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_5"
            android:text="@string/my_information_unlogin_tips"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />
    </RelativeLayout>

</FrameLayout>