<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_item_background_normal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:clickable="true"
        android:text="@string/about"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/divide1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/about"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/gray1" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divide1"
        android:layout_margin="10dp"
        android:clickable="true"
        android:text="@string/feedback"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/divide2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/feedback"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/gray1" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="40dp"
        android:background="@drawable/inputbox_bg"
        android:gravity="center_vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/logout"
        android:textColor="@color/gray"
        android:textSize="18sp" />

</RelativeLayout>